# packs/api/app/blueprints/event_blueprint.rb
@@ -2,9 +2,14 @@ class EventBlueprint < Blueprinter::Base
   identifier :id
   fields :name,
     :location,
+    :country_code,
     :starts_on,
     :ends_on,
+    :starts_at,
+    :ends_at,
+    :timezone_name,
     :status,
+    :source,
     :season_id,
     :external_id,
     :results_synced_at
